.xmonad/xmonad.errors

xmonad.hs:174:28: error:
    • Couldn't match type ‘[]’ with ‘X’
      Expected type: X ()
        Actual type: [()]
    • In the expression:
        spawn myTerminal ++ "--working-directory (xcdw)"
      In the expression:
        ("M-S-<Return>", spawn myTerminal ++ "--working-directory (xcdw)")
      In the expression:
        [("M-C-r", spawn "xmonad --recompile"),
         ("M-S-r", spawn "xmonad --restart"), ("M-S-q", io exitSuccess),
         ("M-q", kill1), ....]
    |
174 |         , ("M-S-<Return>", spawn myTerminal ++ "--working-directory (xcdw)")
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:174:48: error:
    • Couldn't match type ‘Char’ with ‘()’
      Expected type: [()]
        Actual type: [Char]
    • In the second argument of ‘(++)’, namely
        ‘"--working-directory (xcdw)"’
      In the expression: spawn myTerminal ++ "--working-directory (xcdw)"
      In the expression:
        ("M-S-<Return>", spawn myTerminal ++ "--working-directory (xcdw)")
    |
174 |         , ("M-S-<Return>", spawn myTerminal ++ "--working-directory (xcdw)")
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:187:38: error:
    Variable not in scope: myScratchPads :: NamedScratchpads
    |
187 |      ] <+> namedScratchpadManageHook myScratchPads
    |                                      ^^^^^^^^^^^^^
